[0.4.2]

  * Added align helper and grid/axis helper.
  * Introducing refactors, object catalog, unified materials.
  * Added extrude_step (across geometries, with optional caps).

[0.4.1]

  * Added some basic objects: benches, lighthouses, bus stops.
  * Added more road lines (sides and lanes).
  * Added intersections calculation (draft).
  * Exporting OSM amenity and other texts as metadata.
  * Exporting materials as metadata.

  * Fixed road line UV coordinates (left-right crossing issue).

[0.4.0]

  * Added basic font generation.
  * Added OSM generation support.
  * Added UV support.

[0.3.0]

  * Using logging API.
  * Added (corrected) setup.py.
  * Refactored ddd_osm into object oriented.